<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/layout_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_settings" />

        <Button
            android:id="@+id/carrier_config_change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_carrier" />

        <Button
            android:id="@+id/service_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_service" />

        <Button
            android:id="@+id/client_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_test" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_config">

        <Button
            android:id="@+id/send_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_name_running" />

        <TextView
            android:id="@+id/textTestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_test_result" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/viewTestOutput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/test_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_name_exit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
