<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.CarrierConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_package_name" />

        <EditText
            android:id="@+id/editServicePackageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textTestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_release_time" />

        <EditText
            android:id="@+id/editServiceReleaseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/carrier_config_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_name_clear" />

        <Button
            android:id="@+id/carrier_config_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_name_done" />
    </LinearLayout>

</FrameLayout>
